Fix table overflow with reel layout and add reel w-100 utility class

--- a/src/css/constellation.css
+++ b/src/css/constellation.css
@@ -1029,6 +1029,10 @@
                 --item-width: 40vw;
             }
 
+            &.w-100 {
+                --item-width: 100%;
+            }
+
             &.bordered {
                 padding-block: var(--size-3);
                 border: var(--layout-border-width) solid var(--border-color);
